# ipgw-py-manager

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  argument.py  default.nix  default_config.json  flake.nix  install.py  install_config.py  login.py  login_process.py  main.py  parse_account_online_data.py  parse_login_result.py  pyproject.toml  requestresult.py  requirements.txt  sessionreq.py  settings.json  setup.py  show_result.py
.github/workflows/: build-binaries.yml  publish-to-pypi.yml
build-binary/: ipgw_launcher.py
cli/: README.md  action.py  args.py
core/: config.py  errors_modals.py  ipgw.py  requestresult.py
docs/: errors.md
ipgw/cli/: arguments.py  check_user.py  get_info.py  ipgw.py  print_status.py
ipgw/core/: config.py  errors_modals.py  ipgw.py  prepare_session.py  requestresult.py
ipgw/core/api/: SSO.py  portal.py  portal_error.py  sso.py  sso_error.py  sso_mobile.py  sso_mobile_error.py  sso_rsa.py
